# FLUX-Fill-LoRA-Trainer

./: README.md  hvppyfluxfill_main.py  pyproject.toml
src/hvppyfluxfill/: cli.py  dataset.py  train.py  utils.py
tests/dataset/: test_dataset.py
tests/dataset/class_data/: VAL_003.txt
tests/dataset/validation_data/: VAL_001.txt
tutorial/class_data/: CLS_001.txt  CLS_099.txt
tutorial/train_data/: 099.txt
tutorial/validation_data/: VAL_001.txt  VAL_002.txt  VAL_003.txt
