[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvppyfluxfill"
version = "0.1.0"
description = "FLUX Fill LoRA trainer"
authors = [{ name = "hvppycoding" }]
dependencies = [
  "diffusers==0.32.2",
  "accelerate>=0.31.0",
  "torchvision",
  "transformers>=4.41.2",
  "ftfy",
  "tensorboard",
  "Jinja2",
  "peft>=0.11.1",
  "sentencepiece"
]

[project.scripts]
hvppyfluxfill = "hvppyfluxfill.cli:run"